syntax = "proto3";

package main;

option go_package = "./proto";

// 添加用户信息
message AddUserReq {
  int64 id = 1; //用户id
  string mobile = 2; //手机号码
  string user_name = 3; //用户账号
  string nick_name = 4; //用户昵称
  string user_type = 5; //用户类型（00系统用户）
  string avatar = 6; //头像路径
  string email = 7; //用户邮箱
  string password = 8; //密码
  int32 status = 9; //状态(1:正常，0:禁用)
  int64 dept_id = 10; //部门ID
  string remark = 11; //备注
  string create_by = 12; //创建者
  repeated int64 PostIds = 13; //岗位ids
  repeated int64 RoleIds = 14; //角色ids
}

message AddUserResp {
  string pong = 1;
}

// 删除用户信息
message DeleteUserReq {
  repeated int64 ids = 1;
}

message DeleteUserResp {
  string pong = 1;
}

// 更新用户信息
message UpdateUserReq {
  int64 id = 1; //用户id
  string mobile = 2; //手机号码
  string user_name = 3; //用户账号
  string nick_name = 4; //用户昵称
  string user_type = 5; //用户类型（00系统用户）
  string avatar = 6; //头像路径
  string email = 7; //用户邮箱
  int32 status = 9; //状态(1:正常，0:禁用)
  int64 dept_id = 10; //部门ID
  string remark = 11; //备注
  string update_by = 12; //更新者
  repeated int64 PostIds = 13; //岗位ids
  repeated int64 RoleIds = 14; //角色ids
}

message UpdateUserResp {
  string pong = 1;
}

// 更新用户信息状态
message UpdateUserStatusReq {
  repeated int64 ids = 1; //用户id
  int32 status = 2; //状态(1:正常，0:禁用)
  string update_by = 3; //更新者
}

message UpdateUserStatusResp {
  string pong = 1;
}

// 查询用户信息详情
message QueryUserDetailReq {
  int64 id = 1;
}

message QueryUserDetailResp {
  int64 id = 1; //用户id
  string mobile = 2; //手机号码
  string user_name = 3; //用户账号
  string nick_name = 4; //用户昵称
  string user_type = 5; //用户类型（00系统用户）
  string avatar = 6; //头像路径
  string email = 7; //用户邮箱
  int32 status = 9; //状态(1:正常，0:禁用)
  int64 dept_id = 10; //部门ID
  string login_ip = 11; //最后登录IP
  string login_date = 12; //最后登录时间
  string login_browser = 13; //浏览器类型
  string login_os = 14; //操作系统
  string pwd_update_date = 15; //密码最后更新时间
  string remark = 16; //备注
  int32 del_flag = 17; //删除标志（0代表删除 1代表存在）
  string create_by = 18; //创建者
  string create_time = 19; //创建时间
  string update_by = 20; //更新者
  string update_time = 21; //更新时间
  repeated int64 PostIds = 22; //岗位ids
  repeated int64 RoleIds = 23; //角色ids
}

// 分页查询用户信息列表
message QueryUserListReq {
  string mobile = 1; //手机号码
  string user_name = 2; //用户账号
  string nick_name = 3; //用户昵称
  string user_type = 4; //用户类型（00系统用户）
  string avatar = 5; //头像路径
  string email = 6; //用户邮箱
  string password = 7; //密码
  int32 status = 8; //状态(1:正常，0:禁用)
  int64 dept_id = 9; //部门ID
  string login_ip = 10; //最后登录IP
  string login_date = 11; //最后登录时间
  string login_browser = 12; //浏览器类型
  string login_os = 13; //操作系统
  string pwd_update_date = 14; //密码最后更新时间
  int32 del_flag = 15; //删除标志（0代表删除 1代表存在）
  int64 page_num = 16; //第几页
  int64 page_size = 17; //每页的数量
}

message UserListData {
  int64 id = 1; //用户id
  string mobile = 2; //手机号码
  string user_name = 3; //用户账号
  string nick_name = 4; //用户昵称
  string user_type = 5; //用户类型（00系统用户）
  string avatar = 6; //头像路径
  string email = 7; //用户邮箱
  int32 status = 9; //状态(1:正常，0:禁用)
  int64 dept_id = 10; //部门ID
  string login_ip = 11; //最后登录IP
  string login_date = 12; //最后登录时间
  string login_browser = 13; //浏览器类型
  string login_os = 14; //操作系统
  string pwd_update_date = 15; //密码最后更新时间
  string remark = 16; //备注
  int32 del_flag = 17; //删除标志（0代表删除 1代表存在）
  string create_by = 18; //创建者
  string create_time = 19; //创建时间
  string update_by = 20; //更新者
  string update_time = 21; //更新时间
  repeated int64 PostIds = 22; //岗位ids
}

message QueryUserListResp {
  int64 total = 1;
  repeated  UserListData list = 2;
}
message LoginReq {
  string account = 1;//账号
  string password = 2;//密码
  string ip_address = 3; //IP地址
  string os = 4; //操作系统
  string browser = 5; //浏览器

}

message loginResp {
  int64 id = 1;
  string userName = 2;
  string AccessToken = 3;
  repeated string ApiUrls = 4;

}

message InfoReq {
  int64 UserId = 1;
}

message MenuListTree {
  int64 id = 1;
  string name = 2;
  string icon = 3;
  int64 parent_id = 4;
  string path = 5;
  string vue_path = 6;
  string vue_component = 7;
  string vue_icon = 8;
  string vue_redirect = 9;
}

message InfoResp {
  string avatar = 1;
  string name = 2;
  repeated MenuListTree menuListTree = 3;
  repeated string BackgroundUrls = 4;
}

message ReSetPasswordReq {
  int64 id = 1;
  string update_by = 2;
}

message ReSetPasswordResp {
  string pong = 1;
}

message UpdateUserRoleListReq {
  int64 userId = 1;
  repeated int64 roleIds = 2;
}

message UpdateUserRoleListResp {
  string pong = 1;
}
message QueryUserRoleListReq {
  int64 current = 1;
  int64 pageSize = 2;
  int64 userId = 3;
}

message RoleData {
  int64 id = 1; //角色id
  string role_name = 2; //名称
  string role_key = 3; //角色权限字符串
  int32 data_scope = 4; //数据范围（1：全部数据权限 2：自定数据权限 3：本部门数据权限 4：本部门及以下数据权限）
  int32 status = 5; //状态(1:正常，0:禁用)
  string remark = 6; //备注
  int32 del_flag = 7; //删除标志（0代表删除 1代表存在）
  string create_by = 8; //创建者
  string create_time = 9; //创建时间
  string update_by = 10; //更新者
  string update_time = 11; //更新时间


}
message QueryUserRoleListResp {
  repeated RoleData list = 1;
  repeated int64 RoleIds = 2;
  int64 total = 3;
}

message QueryDeptAndPostListReq {

}

message QueryDeptAndPostListResp {
  repeated DeptData dept_list_data = 1;
  repeated PostData post_list_data = 2;
}

message DeptData {
  int64 id = 1; //部门id
  int64 parent_id = 2; //上级部门id
  string ancestors = 3; //祖级列表
  string dept_name = 4; //部门名称
  int32 sort = 5; //显示顺序
  string leader = 6; //负责人
  string phone = 7; //联系电话
  string email = 8; //邮箱
  int32 status = 9; //部门状态（0：停用，1:正常）
  int32 del_flag = 10; //删除标志（0代表删除 1代表存在）
  string remark = 11; //备注信息
  string create_by = 12; //创建者
  string create_time = 13; //创建时间
  string update_by = 14; //更新者
  string update_time = 15; //更新时间

}

message PostData {
  int64 id = 1; //岗位id
  string post_code = 2; //岗位编码
  string post_name = 3; //岗位名称
  int32 sort = 4; //显示顺序
  int32 status = 5; //岗位状态（0：停用，1:正常）
  string remark = 6; //备注
  string create_by = 7; //创建者
  string create_time = 8; //创建时间
  string update_by = 9; //更新者
  string update_time = 10; //更新时间


}

// 用户信息表
service UserService {
  // 添加用户信息
  rpc AddUser(AddUserReq) returns (AddUserResp){}
  // 删除用户信息
  rpc DeleteUser(DeleteUserReq) returns (DeleteUserResp){}
  // 更新用户信息
  rpc UpdateUser(UpdateUserReq) returns (UpdateUserResp ){}
  // 更新用户信息状态
  rpc UpdateUserStatus(UpdateUserStatusReq) returns (UpdateUserStatusResp ){}
  // 查询用户信息详情
  rpc QueryUserDetail(QueryUserDetailReq) returns (QueryUserDetailResp){}
  // 查询用户信息列表
  rpc QueryUserList(QueryUserListReq) returns (QueryUserListResp){}

  // 用户登录
  rpc Login(LoginReq) returns(loginResp);
  // 获取用户个人信息
  rpc UserInfo(InfoReq) returns(InfoResp);
  // 重置用户密码
  rpc ReSetPassword(ReSetPasswordReq) returns(ReSetPasswordResp);
  //查询用户与角色的关联
  rpc QueryUserRoleList(QueryUserRoleListReq) returns(QueryUserRoleListResp);
  //更新用户与角色的关联
  rpc UpdateUserRoleList(UpdateUserRoleListReq) returns(UpdateUserRoleListResp);

  //查询所有部门和岗位
  rpc QueryDeptAndPostList(QueryDeptAndPostListReq) returns(QueryDeptAndPostListResp);
}
